--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="utf-8">
     <title>ICDDS </title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    
+    <meta name="keywords" content="International Conference on Data Decision and Systems, ICDDS 2022, ieeecsbc, IEEE COMPUTER SOCIETY BANGALORE CHAPTER, " >
+    <meta content="Rapid advances and growth in connected world across different application domains are fast pacing the data volumes generated from range of devices. Such high growth is further endorsed by digital transformation, adoption of advanced Internet of Things (IoT) solutions, cyber physical systems, and Smart Things. Data being the centre of innovative systems, its overall realization in solution building depends on several aspects such as the quality of data; data management; computation; knowledge discovery; decision support, etc.
+    ICDDS’22 aims to look broadly at data based innovation and technologies in interdisciplinary areas. The conference considers all aspects of data and decision science, applications, solution design and system challenges in all such new paradigms ranging from theory to applied research." name="description">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
 
     <!-- Favicons -->
     <link href="img/favicon.ico" rel="icon">
@@ -218,15 +219,15 @@
                         </div>
                         <div class="col-md-2">
                             <center><h2 style="font-size: x-large;">Sponsors</h2>
-                            <img class="partners" src="img/dozee.png" />
+                            <img class="partners" src="img/dozee.png" alt="DOZEE LOGO" />
                             <br><br><br>
                             <h2 style="font-size: large;">Academic Partners</h2>
-                            <img class="partners" src="img/APPCAIR LOGO.jpg" />
-                            <img class="partners" src="img/BITS PILANI GOA LOGO.jpg" />
-                            <img class="partners" src="img/BMS LOGO.jpg" />
-                            <img class="partners" src="img/RV LOGO.jpg" />
-                            <img class="partners" src="img/VVCE LOGO.jpg" />
-                            <img class="partners" src="img/MAHE-logo-high-res.jpg" height="75" width="100"
+                            <img class="partners" src="img/APPCAIR LOGO.jpg" alt="APPCAIR LOGO"/>
+                            <img class="partners" src="img/BITS PILANI GOA LOGO.jpg"  alt="BITS PILANI GOA LOGO"/>
+                            <img class="partners" src="img/BMS LOGO.jpg" alt="BMSCE LOGO"/>
+                            <img class="partners" src="img/RV LOGO.jpg" alt="RVCE LOGO" />
+                            <img class="partners" src="img/VVCE LOGO.jpg" alt="VVCE LOGO" />
+                            <img class="partners" src="img/MAHE-logo-high-res.jpg" height="75" width="100" alt="MAHE LOGO"
                                 style="margin-top:20px;" />
                             </center>
                         </div>
