--- a/Foundational-Research.html
+++ b/Foundational-Research.html
@@ -184,8 +184,9 @@
         <strong>Final Paper Submission :</strong> October 28, 2022 <br>
         <strong>Venue :</strong> BMS College Of Engineering, Bangalore
       </p>
-      <br><br>
-      <center><a class="submitbtn" href="https://cmt3.research.microsoft.com/ICDDS2022" target="_blank">Submit Application</a></center>
+      <br>
+      <p class="para"><strong>Submission link :</strong> <a href="https://cmt3.research.microsoft.com/ICDDS2022" target="_blank">CMT</a></p>
+      <!-- <center><a class="submitbtn" href="https://cmt3.research.microsoft.com/ICDDS2022" target="_blank">Submit Application</a></center> -->
       <br><br>
     </div>
     <div class="col-md-2">
