--- a/Foundational-Research.html
+++ b/Foundational-Research.html
@@ -122,6 +122,7 @@
             </div>
             <div class="col-md-6">
               <p class="banner-nav">
+                <!-- <img src="img/logo.png" class="logo" width="150px"> -->
                 <img src="img/IEEE-CS-BangaloreChapterOrange.png" width="190px"><br>
                 <span class="banner-box">
                   <a href="index.html">Home</a>
@@ -185,7 +186,7 @@
         <strong>Venue :</strong> BMS College Of Engineering, Bangalore
       </p>
       <br>
-      <p class="para"><strong>Submission link :</strong> <a href="https://cmt3.research.microsoft.com/ICDDS2022" target="_blank">CMT</a></p>
+      <p class="para1"><strong>Paper Submission link :</strong> <a href="https://cmt3.research.microsoft.com/ICDDS2022" target="_blank">CMT</a></p>
       <!-- <center><a class="submitbtn" href="https://cmt3.research.microsoft.com/ICDDS2022" target="_blank">Submit Application</a></center> -->
       <br><br>
     </div>
