--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                 <div class="row">
                     <div class="col-md-12" style="padding: 0;">
                         <h1 class="banner1-header1">
+                            <img src="img/logo.png" class="logo" width="200px">
                             <img src="img/IEEE-CS-BangaloreChapterOrange.png" background="white" width="200px"><br><br>
                             International Conference on Data, Decision and Systems
                         </h1>
