--- a/Foundational-Research.html
+++ b/Foundational-Research.html
@@ -100,7 +100,7 @@
           <li><a href="venue.html">Venue</a></li>
           <!-- <li><a href="ticket.html">Tickets</a></li> -->
           <li><a href="contact.html">Contact</a></li>
-          <!-- <li><a href="login.html">Login</a></li> -->
+          <li><a href="registration.html">Registration</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -194,6 +194,7 @@
       <br>
       <center><h2 style="font-size: x-large;">Sponsors</h2>
       <img class="img-fluid" src="img/dozee.png"  alt="DOZEE LOGO"/>
+      <img class="partners" src="img/boeing.png" alt="Boeing LOGO" width="170" height="150px"/>
       <br><br>
       <h2 style="font-size: larger;">Academic Partners</h2>
       <img class="img-fluid" src="img/APPCAIR LOGO.jpg" alt="APPCAIR LOGO" />
