--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -99,7 +99,7 @@
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
                     <li><a href="contact.html">Contact</a></li>
-                    <!-- <li><a href="login.html">Login</a></li> -->
+                    <li><a href="registration.html">Registration</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
         </div>
@@ -247,6 +247,20 @@
                     </div>
                 </div>
             </section>
+            <section id="agenda">
+                <div class="container">
+                    <header class="section-header">
+                        <h3>Publicity Co-Chairs</h3>
+                    </header>
+                    <div class="image-holder">
+                        <div>
+                            <img src="img/M Tanveer.png" width="250px" height="250px">
+                            <p class="commitee-names">M Tanveer</p>
+                            <p class="position"> IIT Indore</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
             <section id="agenda">
                 <div class="container">
@@ -254,10 +268,11 @@
                         <h3>Publication Chairs</h3>
                     </header>
                     <div class="image-holder">
+                       
                         <div>
                             <img src="img/Alok-Ranjan.jpg" width="250px" height="250px">
                             <p class="commitee-names">Alok Ranjan</p>
-                            <p class="position">Bosch India</p>
+                            <p class="position">Bosch, India</p>
                         </div>
                         <div>
                             <img src="img/seems_chopra.jpg" width="250px" height="250px">
@@ -368,6 +383,7 @@
             <center>
             <h3>Sponsors</h3>
             <img class="" src="img/dozee.png" width="170px;" height="150px" alt="DOZEE LOGO" />
+            <img class="partners" src="img/boeing.png" alt="Boeing LOGO" width="170" height="150px"/>
             <br><br><br>
             <h3>Academic Partners</h3>
             <img class="" src="img/APPCAIR LOGO.jpg" width="170px;" height="150px" alt="APPCAIR LOGO" />
