--- a/venue.html
+++ b/venue.html
@@ -97,7 +97,7 @@
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
                     <li><a href="contact.html">Contact</a></li>
-                    <!-- <li><a href="login.html">Login</a></li> -->
+                    <li><a href="registration.html">Registration</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
         </div>
@@ -168,6 +168,7 @@
             <center>
             <h2 style="font-size: x-larger;">Sponsors</h2>
             <img class="" src="img/dozee.png" width="170px;" height="150px" ; alt="DOZEE LOGO"/>
+            <img class="" src="img/boeing.png" alt="Boeing LOGO" width="170" height="150px"/>
             <br><br><br>
             <h2 style="font-size: x-larger;">Academic Partners</h2>
 
