--- a/Applications.html
+++ b/Applications.html
@@ -101,7 +101,7 @@
           <li><a href="venue.html">Venue</a></li>
           <!-- <li><a href="ticket.html">Tickets</a></li> -->
           <li><a href="contact.html">Contact</a></li>
-          <!-- <li><a href="login.html">Login</a></li> -->
+          <li><a href="registration.html">Registration</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -185,6 +185,7 @@
       <h2 style="font-size: x-large;">Sponsors</h2>
       <br>
       <img class="img-fluid" src="img/dozee.png"  alt="Dozee Logo"/>
+      <img class="partners" src="img/boeing.png" alt="Boeing LOGO" width="170" height="150px"/>
       <br><br><br>
       <h2 style="font-size: larger;">Academic Partners</h2>
 
