--- a/Program-Committee.html
+++ b/Program-Committee.html
@@ -95,7 +95,7 @@
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
                     <li><a href="contact.html">Contact</a></li>
-                    <!-- <li><a href="login.html">Login</a></li> -->
+                    <li><a href="registration.html">Registration</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
         </div>
@@ -239,6 +239,7 @@
             <center>
             <h3>Sponsors</h3>
             <img class="" src="img/dozee.png" width="170px;" height="150px" alt="DOZEE LOGO" />
+            <img class="partners" src="img/boeing.png" alt="Boeing LOGO" width="170" height="150px"/>
             <br><br><br>
             <h3>Academic Partners</h3>
             <img class="" src="img/APPCAIR LOGO.jpg" width="170px;" height="150px" alt="APPCAIR LOGO" />
