--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
                     <li><a href="contact.html">Contact</a></li>
-                    <!-- <li><a href="login.html">Login</a></li> -->
+                    <li><a href="registration.html">Registration</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
         </div>
@@ -221,6 +221,8 @@
                         <div class="col-md-2">
                             <center><h2 style="font-size: x-large;">Sponsors</h2>
                             <img class="partners" src="img/dozee.png" alt="DOZEE LOGO" />
+                            <br><br>
+                            <img class="partners" src="img/boeing.png" alt="Boeing LOGO" width="100%" height="150px"/>
                             <br><br><br>
                             <h2 style="font-size: large;">Academic Partners</h2>
                             <img class="partners" src="img/APPCAIR LOGO.jpg" alt="APPCAIR LOGO"/>
