--- a/registration.html
+++ b/registration.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Contact | ICDDS</title>
+    <title>Registration | ICDDS</title>
     <meta name="keywords" content="International Conference on Data Decision and Systems, ICDDS 2022, ieeecsbc, IEEE COMPUTER SOCIETY BANGALORE CHAPTER, " >
     <meta content="Rapid advances and growth in connected world across different application domains are fast pacing the data volumes generated from range of devices. Such high growth is further endorsed by digital transformation, adoption of advanced Internet of Things (IoT) solutions, cyber physical systems, and Smart Things. Data being the centre of innovative systems, its overall realization in solution building depends on several aspects such as the quality of data; data management; computation; knowledge discovery; decision support, etc.
     ICDDS’22 aims to look broadly at data based innovation and technologies in interdisciplinary areas. The conference considers all aspects of data and decision science, applications, solution design and system challenges in all such new paradigms ranging from theory to applied research." name="description">
@@ -112,7 +112,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <h1 class="banner-header">
-                                Contact
+                                Registration
                             </h1>
                         </div>
                         <div class="col-md-6">
@@ -120,7 +120,7 @@
                                 <img src="img/IEEE-CS-BangaloreChapterOrange.png" width="190px"><br>
                                 <span class="banner-box">
                                     <a href="index.html">Home</a>
-                                    <a href="contact.html">Contact</a>
+                                    <a href="contact.html">Registration</a>
                                 </span>
                             </p>
                         </div>
@@ -135,32 +135,14 @@
     <section id="contact">
         <div class="container">
             <div class="section-header">
-                <h3>Contact</h3>
+                <h3>Registration</h3>
             </div>
             <div class="row">
 
-
-                <div class="col-md-8  form">
-                    <form action="https://formspree.io/f/meqnzvwn" method="post" role="form" class="contactForm">
-                        <div class="form-row">
-                            <div class="form-group col-md-6">
-                                <input name="name" type="text" class="form-control" placeholder="Your Name" required />
-                            </div>
-                            <div class="form-group col-md-6">
-                                <input name="email" type="email" class="form-control" placeholder="Your Email"
-                                    required />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <input name="subject" type="text" class="form-control" placeholder="Subject" required />
-                        </div>
-                        <div class="form-group">
-                            <textarea name="message" class="form-control" rows="6" placeholder="Message"
-                                required></textarea>
-                        </div>
-                        <div><button type="submit">Send Message</button></div>
-                    </form>
+                <div class="col-md-8">
+                    <img src="img/registration.png">
                 </div>
+                
                 <div class="col-md-4">
                     <center>
                     <h3>Sponsors</h3>
