--- a/Foundational-Research.html
+++ b/Foundational-Research.html
@@ -96,7 +96,7 @@
               <li><a href="Program-Committee.html">Program Committee</a></li>
             </ul>
           </li>
-
+          <li><a href="speakers.html">Speakers</a></li>
           <li><a href="venue.html">Venue</a></li>
           <!-- <li><a href="ticket.html">Tickets</a></li> -->
           <li><a href="contact.html">Contact</a></li>
@@ -126,7 +126,7 @@
                 <img src="img/IEEE-CS-BangaloreChapterOrange.png" width="190px"><br>
                 <span class="banner-box">
                   <a href="index.html">Home</a>
-                  <a href="committe.html">Foundational Research</a>
+                  <a href="Foundational-Research.html">Foundational Research</a>
                 </span>
               </p>
             </div>
