--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -91,11 +91,7 @@
 
                         </ul>
                     </li>
-
-                    <!-- <li><a href="agenda.html">Agenda</a></li> -->
-
-
-
+                    <li><a href="speakers.html">Speakers</a></li>
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
                     <li><a href="contact.html">Contact</a></li>
@@ -123,7 +119,7 @@
                                 <img src="img/IEEE-CS-BangaloreChapterOrange.png" width="190px"><br>
                                 <span class="banner-box">
                                     <a href="index.html">Home</a>
-                                    <a href="Program-Committee.html">Organizing Committee</a>
+                                    <a href="Organizing-Committee.html">Organizing Committee</a>
                                 </span>
                             </p>
                         </div>
