--- a/Systems-Research.html
+++ b/Systems-Research.html
@@ -97,7 +97,7 @@
 
             </ul>
           </li>
-
+          <li><a href="speakers.html">Speakers</a></li>
           <li><a href="venue.html">Venue</a></li>
           <!-- <li><a href="ticket.html">Tickets</a></li> -->
           <li><a href="contact.html">Contact</a></li>
@@ -126,7 +126,7 @@
                 <img src="img/IEEE-CS-BangaloreChapterOrange.png" width="190px"><br>
                 <span class="banner-box">
                   <a href="index.html">Home</a>
-                  <a href="committe.html">DDS and System Research</a>
+                  <a href="Systems-Research.html">DDS and System Research</a>
                 </span>
               </p>
             </div>
