--- a/Applications.html
+++ b/Applications.html
@@ -97,7 +97,7 @@
 
             </ul>
           </li>
-
+          <li><a href="speakers.html">Speakers</a></li>
           <li><a href="venue.html">Venue</a></li>
           <!-- <li><a href="ticket.html">Tickets</a></li> -->
           <li><a href="contact.html">Contact</a></li>
@@ -126,7 +126,7 @@
                 <img src="img/IEEE-CS-BangaloreChapterOrange.png" width="190px"><br>
                 <span class="banner-box">
                   <a href="index.html">Home</a>
-                  <a href="committe.html">DDS and applications</a>
+                  <a href="Applications.html">DDS and applications</a>
                 </span>
               </p>
             </div>
