--- a/contact.html
+++ b/contact.html
@@ -91,8 +91,7 @@
 
                         </ul>
                     </li>
-
-
+                    <li><a href="speakers.html">Speakers</a></li>
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
                     <li><a href="contact.html">Contact</a></li>
