--- a/registration.html
+++ b/registration.html
@@ -91,8 +91,7 @@
 
                         </ul>
                     </li>
-
-
+                    <li><a href="speakers.html">Speakers</a></li>
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
                     <li><a href="contact.html">Contact</a></li>
@@ -120,7 +119,7 @@
                                 <img src="img/IEEE-CS-BangaloreChapterOrange.png" width="190px"><br>
                                 <span class="banner-box">
                                     <a href="index.html">Home</a>
-                                    <a href="contact.html">Registration</a>
+                                    <a href="registration.html">Registration</a>
                                 </span>
                             </p>
                         </div>
@@ -140,7 +139,7 @@
             <div class="row">
 
                 <div class="col-md-8">
-                    <img src="img/registration.png">
+                    <img class="registration" src="img/registration.png">
                 </div>
                 
                 <div class="col-md-4">
