--- a/index.html
+++ b/index.html
@@ -103,13 +103,11 @@
     </header>
     <!-- #header end -->
 
-
-
     <!-- Banner Section Start-->
     <section class="banner" style="height: 700px;">
+        <marquee class="notification">Deadline for Paper Submission has been Extended.</marquee>
         <div class="container">
             <div class="row">
-
                 <div class="row">
                     <div class="col-md-12" style="padding: 0;">
                         <h1 class="banner1-header1">
