--- a/speakers.html
+++ b/speakers.html
@@ -150,6 +150,11 @@
                                     <p class="commitee-names">Mikhail Belkin</p>
                                     <p class="position">University of California, San Diego</p>
                                 </div>
+                                <div>
+                                    <img src="img/sandeepj.jpg" width="250px" height="250px">
+                                    <p class="commitee-names">Sandeep Juneja</p>
+                                    <p class="position">Visiting Researcher, Google Research Bangalore</p>
+                                </div>
                             </div>
                             
                         </div>
@@ -166,6 +171,16 @@
                                     <p class="commitee-names">Abhyuday Mandal</p>
                                     <p class="position">University of Georgia, USA</p>
                                 </div>
+                                <div>
+                                    <img src="img/Praneeth.png" width="250px" height="250px">
+                                    <p class="commitee-names">Praneeth Netrapalli</p>
+                                    <p class="position">Google Research</p>
+                                </div>
+                                <div>
+                                    <img src="img/Abir.png" width="250px" height="250px">
+                                    <p class="commitee-names">Abir De</p>
+                                    <p class="position">IIT Bombay</p>
+                                </div>  
                             </div>
                         </div>
                     </section>
