--- a/speakers.html
+++ b/speakers.html
@@ -145,7 +145,7 @@
                                 <h3>ICDDS 2022 Keynote Speakers</h3>
                             </header>
                             <div class="image-holder">
-                                <div>
+                                <!-- <div>
                                     <img src="img/Mikhail.png" width="250px" height="250px">
                                     <p class="commitee-names">Mikhail Belkin</p>
                                     <p class="position">University of California, San Diego</p>
@@ -153,8 +153,41 @@
                                 <div>
                                     <img src="img/sandeepj.jpg" width="250px" height="250px">
                                     <p class="commitee-names">Sandeep Juneja</p>
-                                    <p class="position">Visiting Researcher, Google Research Bangalore</p>
+                                    <p class="position">Tata Institute of Fundamental Research, India</p>
                                 </div>
+                                <div>
+                                    <img src="img/Vasant.jpg" width="250px" height="250px">
+                                    <p class="commitee-names">Vasant Gajanan Honavar</p>
+                                    <p class="position">Penn State Neuroscience Institute </p>
+                                </div> -->
+                                <div class="card">
+                                    <img src="img/Mikhail.png" alt="Avatar" style="width:100%; height:300px;">
+                                    <div class="containerhome">
+                                        <center>
+                                      <h4><b>Mikhail Belkin</b></h4> 
+                                      <br>
+                                      <h5>University of California,<br> San Diego </h5>
+                                    </center>
+                                    </div>
+                                  </div>
+                                  <div class="card">
+                                    <img src="img/sandeepj.jpg" alt="Avatar" style="width:100%;height:300px;">
+                                    <div class="containerhome">
+                                        <center>
+                                      <h4><b>Sandeep Juneja</b></h4> <br>
+                                      <h5>Tata Institute of Fundamental Research,<br> India</h5> 
+                                    </center>
+                                    </div>
+                                  </div>
+                                  <div class="card">
+                                    <img src="img/Vasant.jpg" alt="Avatar" style="width:100%;height:300px;">
+                                    <div class="containerhome">
+                                        <center>
+                                      <h4><b>Vasant Gajanan Honavar</b></h4> 
+                                      <h5>Penn State Neuroscience Institute </h5> 
+                                    </center>
+                                    </div>
+                                  </div>
                             </div>
                             
                         </div>
@@ -166,7 +199,7 @@
                                 <h3>ICDDS 2022 Plenary Speakers</h3>
                             </header>
                             <div class="image-holder">
-                                <div>
+                                <!-- <div>
                                     <img src="img/Abhyuday.jpg" width="250px" height="250px">
                                     <p class="commitee-names">Abhyuday Mandal</p>
                                     <p class="position">University of Georgia, USA</p>
@@ -181,7 +214,35 @@
                                     <p class="commitee-names">Abir De</p>
                                     <p class="position">IIT Bombay</p>
                                 </div>  
-                            </div>
+                            </div> -->
+                            <div class="card">
+                                <img src="img/Abhyuday.jpg" alt="Avatar" style="width:100%; height:300px;">
+                                <div class="containerhome">
+                                    <center>
+                                  <h4><b>Abhyuday Mandal</b></h4> 
+                                  <br>
+                                  <h5>University of Georgia,<br> USA </h5>
+                                </center>
+                                </div>
+                              </div>
+                              <div class="card">
+                                <img src="img/Praneeth.png" alt="Avatar" style="width:100%;height:300px;">
+                                <div class="containerhome">
+                                    <center>
+                                  <h4><b>Praneeth Netrapalli</b></h4> <br>
+                                  <h5>Google Research</h5> 
+                                </center>
+                                </div>
+                              </div>
+                              <div class="card">
+                                <img src="img/Abir.png" alt="Avatar" style="width:100%;height:300px;">
+                                <div class="containerhome">
+                                    <center>
+                                  <h4><b>Abir De</b></h4> <br><br>
+                                  <h5>IIT Bombay,<br>India</h5> 
+                                </center>
+                                </div>
+                              </div>
                         </div>
                     </section>
                 </div>
