--- a/speakers.html
+++ b/speakers.html
@@ -243,6 +243,15 @@
                                 </center>
                                 </div>
                               </div>
+                              <div class="card">
+                                <img src="img/Prathosh.jpg" alt="Avatar" style="width:100%;height:300px;">
+                                <div class="containerhome">
+                                    <center>
+                                  <h4><b>Prathosh AP</b></h4> <br><br>
+                                  <h5>Indian Institute of Science (IISc)<br>India</h5> 
+                                </center>
+                                </div>
+                              </div>
                         </div>
                     </section>
                 </div>
