--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <!-- Banner Section Start-->
     <section class="banner" style="height: 700px;">
-        <marquee class="notification">Deadline for Paper Submission has been Extended.</marquee>
+        <!-- <marquee class="notification">Deadline for Paper Submission has been Extended.</marquee> -->
         <div class="container">
             <div class="row">
                 <div class="row">
@@ -225,6 +225,7 @@
                                             <p class="commitee-names">Abir De</p>
                                             <p class="position">IIT Bombay</p>
                                         </div>   -->
+                                        
                                         <div class="card">
                                             <img src="img/Abhyuday.jpg" alt="Avatar" style="width:100%; height:300px;">
                                             <div class="containerhome">
@@ -250,6 +251,16 @@
                                                 <center>
                                               <h4><b>Abir De</b></h4> <br><br>
                                               <h5>IIT Bombay,<br>India</h5> 
+                                            </center>
+                                            </div>
+                                          </div>
+                                          
+                                          <div class="card">
+                                            <img src="img/Prathosh.jpg" alt="Avatar" style="width:100%;height:300px;">
+                                            <div class="containerhome">
+                                                <center>
+                                              <h4><b>Prathosh AP</b></h4> <br><br>
+                                              <h5>Indian Institute of Science (IISc)<br>India</h5> 
                                             </center>
                                             </div>
                                           </div>
