--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -73,7 +73,7 @@
             </div>
             <nav id="nav-menu-container">
                 <ul class="nav-menu">
-                    <li class="menu-active"><a href="index.html">Home</a></li>
+                    <!-- <li class="menu-active"><a href="index.html">Home</a></li> -->
 
                     <li><a href="#">Call for Papers</a>
                         <ul class="nav-dropdown">
@@ -95,6 +95,8 @@
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="accepted-papers.html">Accepted Papers</a></li>
+                    <li><a href="final-camera-ready-guidelines.html">Final Camera Ready Guidelines</a></li>
                     <li><a href="registration.html">Registration</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
