chore:updated speakers and sponsors

--- a/speakers.html
+++ b/speakers.html
@@ -190,6 +190,16 @@
                                     </center>
                                     </div>
                                   </div>
+                                <div class="card">
+                                    <img src="https://homepage.tudelft.nl/w5p50/vp.jpg" alt="Avatar" style="width:100%; height:300px;">
+                                    <div class="containerhome">
+                                        <center>
+                                            <h4><b>R. Venkatesha Prasad</b></h4>
+                                            <br>
+                                            <h5>TU Delft</h5>
+                                        </center>
+                                    </div>
+                                </div>
                             </div>
                             
                         </div>
@@ -254,6 +264,17 @@
                                 </center>
                                 </div>
                               </div>
+                            <div class="card">
+                                <img src="https://media-exp1.licdn.com/dms/image/C5603AQE1rl8-5LMXoQ/profile-displayphoto-shrink_200_200/0/1622721881793?e=1674086400&v=beta&t=GshZcRcmrjhQeBu4rokHuTsW5DYz1-Hd4kVVFdSXPIY" alt="Avatar" style="width:100%; height:300px;">
+                                <div class="containerhome">
+                                    <center>
+                                        <h4><b>Yashovardhan Chati
+                                        </b></h4>
+                                        <br>
+                                        <h5>TCS Research</h5>
+                                    </center>
+                                </div>
+                            </div>
                         </div>
                     </section>
                 </div>
@@ -272,6 +293,8 @@
                     <img class="" src="img/RV LOGO.jpg" width="170px;" height="150px" alt="RVCE LOGO" />
                     <img class="" src="img/VVCE LOGO.jpg" width="170px;" height="150px" alt="VVCE LOGO" />
                     <img class="" src="img/MAHE-logo-high-res.jpg" width="170px;" alt="MAHE LOGO" />
+                    <img class="" src="img/continental.jpeg" width="170px;" alt="continental LOGO" />
+                    <img class="" src="img/Bosch_symbol_logo_black_red.svg" width="170px;" alt="Bosch LOGO" />
                 </center>
                 </div>
             </div>
