--- a/index.html
+++ b/index.html
@@ -198,6 +198,16 @@
                                             </center>
                                             </div>
                                           </div>
+                                        <div class="card">
+                                            <img src="https://homepage.tudelft.nl/w5p50/vp.jpg" alt="Avatar" style="width:100%; height:300px;">
+                                            <div class="containerhome">
+                                                <center>
+                                                    <h4><b>R. Venkatesha Prasad</b></h4>
+                                                    <br>
+                                                    <h5>TU Delft</h5>
+                                                </center>
+                                            </div>
+                                        </div>
                                     </div>
                                     
 
@@ -266,6 +276,18 @@
                                             </center>
                                             </div>
                                           </div>
+                                        <div class="card">
+                                            <img src="https://media-exp1.licdn.com/dms/image/C5603AQE1rl8-5LMXoQ/profile-displayphoto-shrink_200_200/0/1622721881793?e=1674086400&v=beta&t=GshZcRcmrjhQeBu4rokHuTsW5DYz1-Hd4kVVFdSXPIY"
+                                                alt="Avatar" style="width:100%; height:300px;">
+                                            <div class="containerhome">
+                                                <center>
+                                                    <h4><b>Yashovardhan Chati
+                                                        </b></h4>
+                                                    <br>
+                                                    <h5>TCS Research</h5>
+                                                </center>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </section>
