--- a/index.html
+++ b/index.html
@@ -365,15 +365,17 @@
                             <img class="partners" src="img/dozee.png" alt="DOZEE LOGO" />
                             <br><br>
                             <img class="partners" src="img/boeing.png" alt="Boeing LOGO" width="100%" height="150px"/>
+                            <img class="" src="img/continental.jpeg" width="170px;" alt="continental LOGO" />
+                            <img class="" src="img/Bosch_symbol_logo_black_red.svg" width="170px;" alt="Bosch LOGO" />
                             <br><br><br>
                             <h2 style="font-size: large;">Academic Partners</h2>
                             <img class="partners" src="img/APPCAIR LOGO.jpg" alt="APPCAIR LOGO"/>
                             <img class="partners" src="img/BITS PILANI GOA LOGO.jpg"  alt="BITS PILANI GOA LOGO"/>
-                            <img class="partners" src="img/BMS LOGO.jpg" alt="BMSCE LOGO"/>
-                            <img class="partners" src="img/RV LOGO.jpg" alt="RVCE LOGO" />
-                            <img class="partners" src="img/VVCE LOGO.jpg" alt="VVCE LOGO" />
-                            <img class="partners" src="img/MAHE-logo-high-res.jpg" height="75" width="100" alt="MAHE LOGO"
-                                style="margin-top:20px;" />
+                            <img class="" src="img/BMS LOGO.jpg" width="170px;" height="150px" alt="BMSCE LOGO" />
+                            <img class="" src="img/RV LOGO.jpg" width="170px;" height="150px" alt="RVCE LOGO" />
+                            <img class="" src="img/VVCE LOGO.jpg" width="170px;" height="150px" alt="VVCE LOGO" />
+                            <img class="" src="img/MAHE-logo-high-res.jpg" width="170px;" alt="MAHE LOGO" />
+                            
                             </center>
                         </div>
 
