--- a/speakers.html
+++ b/speakers.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="utf-8">
     <title>Registration | ICDDS</title>
-    <meta name="keywords" content="International Conference on Data Decision and Systems, ICDDS 2022, ieeecsbc, IEEE COMPUTER SOCIETY BANGALORE CHAPTER, " >
-    <meta content="Rapid advances and growth in connected world across different application domains are fast pacing the data volumes generated from range of devices. Such high growth is further endorsed by digital transformation, adoption of advanced Internet of Things (IoT) solutions, cyber physical systems, and Smart Things. Data being the centre of innovative systems, its overall realization in solution building depends on several aspects such as the quality of data; data management; computation; knowledge discovery; decision support, etc.
-    ICDDS’22 aims to look broadly at data based innovation and technologies in interdisciplinary areas. The conference considers all aspects of data and decision science, applications, solution design and system challenges in all such new paradigms ranging from theory to applied research." name="description">
+    <meta name="keywords"
+        content="International Conference on Data Decision and Systems, ICDDS 2022, ieeecsbc, IEEE COMPUTER SOCIETY BANGALORE CHAPTER, ">
+    <meta
+        content="Rapid advances and growth in connected world across different application domains are fast pacing the data volumes generated from range of devices. Such high growth is further endorsed by digital transformation, adoption of advanced Internet of Things (IoT) solutions, cyber physical systems, and Smart Things. Data being the centre of innovative systems, its overall realization in solution building depends on several aspects such as the quality of data; data management; computation; knowledge discovery; decision support, etc.
+    ICDDS’22 aims to look broadly at data based innovation and technologies in interdisciplinary areas. The conference considers all aspects of data and decision science, applications, solution design and system challenges in all such new paradigms ranging from theory to applied research."
+        name="description">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
 
     <!-- Favicons -->
@@ -136,7 +139,9 @@
     <section id="contact">
         <div class="container">
             <div class="section-header">
-                <center><h3>Speakers</h3></center>
+                <center>
+                    <h3>Speakers</h3>
+                </center>
             </div>
             <div class="row">
 
@@ -166,32 +171,33 @@
                                     <img src="img/Mikhail.png" alt="Avatar" style="width:100%; height:300px;">
                                     <div class="containerhome">
                                         <center>
-                                      <h4><b>Mikhail Belkin</b></h4> 
-                                      <br>
-                                      <h5>University of California,<br> San Diego </h5>
-                                    </center>
+                                            <h4><b>Mikhail Belkin</b></h4>
+                                            <br>
+                                            <h5>University of California,<br> San Diego </h5>
+                                        </center>
                                     </div>
-                                  </div>
-                                  <div class="card">
+                                </div>
+                                <div class="card">
                                     <img src="img/sandeepj.jpg" alt="Avatar" style="width:100%;height:300px;">
                                     <div class="containerhome">
                                         <center>
-                                      <h4><b>Sandeep Juneja</b></h4> <br>
-                                      <h5>Tata Institute of Fundamental Research,<br> India</h5> 
-                                    </center>
+                                            <h4><b>Sandeep Juneja</b></h4> <br>
+                                            <h5>Tata Institute of Fundamental Research,<br> India</h5>
+                                        </center>
                                     </div>
-                                  </div>
-                                  <div class="card">
+                                </div>
+                                <div class="card">
                                     <img src="img/Vasant.jpg" alt="Avatar" style="width:100%;height:300px;">
                                     <div class="containerhome">
                                         <center>
-                                      <h4><b>Vasant Gajanan Honavar</b></h4> 
-                                      <h5>Penn State Neuroscience Institute </h5> 
-                                    </center>
+                                            <h4><b>Vasant Gajanan Honavar</b></h4>
+                                            <h5>Penn State Neuroscience Institute </h5>
+                                        </center>
                                     </div>
-                                  </div>
+                                </div>
                                 <div class="card">
-                                    <img src="https://homepage.tudelft.nl/w5p50/vp.jpg" alt="Avatar" style="width:100%; height:300px;">
+                                    <img src="https://homepage.tudelft.nl/w5p50/vp.jpg" alt="Avatar"
+                                        style="width:100%; height:300px;">
                                     <div class="containerhome">
                                         <center>
                                             <h4><b>R. Venkatesha Prasad</b></h4>
@@ -201,7 +207,7 @@
                                     </div>
                                 </div>
                             </div>
-                            
+
                         </div>
                     </section>
                     <br>
@@ -227,75 +233,77 @@
                                     <p class="position">IIT Bombay</p>
                                 </div>  
                             </div> -->
-                            <div class="card">
-                                <img src="img/Abhyuday.jpg" alt="Avatar" style="width:100%; height:300px;">
-                                <div class="containerhome">
-                                    <center>
-                                  <h4><b>Abhyuday Mandal</b></h4> 
-                                  <br>
-                                  <h5>University of Georgia,<br> USA </h5>
-                                </center>
+                                <div class="card">
+                                    <img src="img/Abhyuday.jpg" alt="Avatar" style="width:100%; height:300px;">
+                                    <div class="containerhome">
+                                        <center>
+                                            <h4><b>Abhyuday Mandal</b></h4>
+                                            <br>
+                                            <h5>University of Georgia,<br> USA </h5>
+                                        </center>
+                                    </div>
                                 </div>
-                              </div>
-                              <div class="card">
-                                <img src="img/Praneeth.png" alt="Avatar" style="width:100%;height:300px;">
-                                <div class="containerhome">
-                                    <center>
-                                  <h4><b>Praneeth Netrapalli</b></h4> <br>
-                                  <h5>Google Research</h5> 
-                                </center>
+                                <div class="card">
+                                    <img src="img/Praneeth.png" alt="Avatar" style="width:100%;height:300px;">
+                                    <div class="containerhome">
+                                        <center>
+                                            <h4><b>Praneeth Netrapalli</b></h4> <br>
+                                            <h5>Google Research</h5>
+                                        </center>
+                                    </div>
                                 </div>
-                              </div>
-                              <div class="card">
-                                <img src="img/Abir.png" alt="Avatar" style="width:100%;height:300px;">
-                                <div class="containerhome">
-                                    <center>
-                                  <h4><b>Abir De</b></h4> <br><br>
-                                  <h5>IIT Bombay,<br>India</h5> 
-                                </center>
+                                <div class="card">
+                                    <img src="img/Abir.png" alt="Avatar" style="width:100%;height:300px;">
+                                    <div class="containerhome">
+                                        <center>
+                                            <h4><b>Abir De</b></h4> <br><br>
+                                            <h5>IIT Bombay,<br>India</h5>
+                                        </center>
+                                    </div>
                                 </div>
-                              </div>
-                              <div class="card">
-                                <img src="img/Prathosh.jpg" alt="Avatar" style="width:100%;height:300px;">
-                                <div class="containerhome">
-                                    <center>
-                                  <h4><b>Prathosh AP</b></h4> <br><br>
-                                  <h5>Indian Institute of Science (IISc)<br>India</h5> 
-                                </center>
+                                <div class="card">
+                                    <img src="img/Prathosh.jpg" alt="Avatar" style="width:100%;height:300px;">
+                                    <div class="containerhome">
+                                        <center>
+                                            <h4><b>Prathosh AP</b></h4> <br><br>
+                                            <h5>Indian Institute of Science (IISc)<br>India</h5>
+                                        </center>
+                                    </div>
                                 </div>
-                              </div>
-                            <div class="card">
-                                <img src="https://media-exp1.licdn.com/dms/image/C5603AQE1rl8-5LMXoQ/profile-displayphoto-shrink_200_200/0/1622721881793?e=1674086400&v=beta&t=GshZcRcmrjhQeBu4rokHuTsW5DYz1-Hd4kVVFdSXPIY" alt="Avatar" style="width:100%; height:300px;">
-                                <div class="containerhome">
-                                    <center>
-                                        <h4><b>Yashovardhan Chati
-                                        </b></h4>
-                                        <br>
-                                        <h5>TCS Research</h5>
-                                    </center>
+                                <div class="card">
+                                    <img src="https://media-exp1.licdn.com/dms/image/C5603AQE1rl8-5LMXoQ/profile-displayphoto-shrink_200_200/0/1622721881793?e=1674086400&v=beta&t=GshZcRcmrjhQeBu4rokHuTsW5DYz1-Hd4kVVFdSXPIY"
+                                        alt="Avatar" style="width:100%; height:300px;">
+                                    <div class="containerhome">
+                                        <center>
+                                            <h4><b>Yashovardhan Chati
+                                                </b></h4>
+                                            <br>
+                                            <h5>TCS Research</h5>
+                                        </center>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
                     </section>
                 </div>
-                
+
                 <div class="col-md-2">
                     <center>
-                    <h3>Sponsors</h3>
-                    <img  src="img/dozee.png" width="170px;" height="150px" alt="DOZEE LOGO"/>
-                    <img class="" src="img/boeing.png" alt="Boeing LOGO" width="170" height="150px"/>
-                    <br><br><br>
-                    <h3>Academic Partners</h3>
-                    <img class="" src="img/APPCAIR LOGO.jpg" width="170px;" height="150px" alt="APPCAIR LOGO" />
-                    <img class="" src="img/BITS PILANI GOA LOGO.jpg" width="170px;" height="200px"
-                        alt="BITS PILANI GOA LOGO" />
-                    <img class="" src="img/BMS LOGO.jpg" width="170px;" height="150px" alt="BMSCE LOGO" />
-                    <img class="" src="img/RV LOGO.jpg" width="170px;" height="150px" alt="RVCE LOGO" />
-                    <img class="" src="img/VVCE LOGO.jpg" width="170px;" height="150px" alt="VVCE LOGO" />
-                    <img class="" src="img/MAHE-logo-high-res.jpg" width="170px;" alt="MAHE LOGO" />
-                    <img class="" src="img/continental.jpeg" width="170px;" alt="continental LOGO" />
-                    <img class="" src="img/Bosch_symbol_logo_black_red.svg" width="170px;" alt="Bosch LOGO" />
-                </center>
+                        <h3>Sponsors</h3>
+                        <img src="img/dozee.png" width="170px;" height="150px" alt="DOZEE LOGO" />
+                        <img class="" src="img/boeing.png" alt="Boeing LOGO" width="170" height="150px" />
+                        <img class="" src="img/continental.jpeg" width="170px;" alt="continental LOGO" />
+                        <img class="" src="img/Bosch_symbol_logo_black_red.svg" width="170px;" alt="Bosch LOGO" />
+                        <br><br><br>
+                        <h3>Academic Partners</h3>
+                        <img class="" src="img/APPCAIR LOGO.jpg" width="170px;" height="150px" alt="APPCAIR LOGO" />
+                        <img class="" src="img/BITS PILANI GOA LOGO.jpg" width="170px;" height="200px"
+                            alt="BITS PILANI GOA LOGO" />
+                        <img class="" src="img/BMS LOGO.jpg" width="170px;" height="150px" alt="BMSCE LOGO" />
+                        <img class="" src="img/RV LOGO.jpg" width="170px;" height="150px" alt="RVCE LOGO" />
+                        <img class="" src="img/VVCE LOGO.jpg" width="170px;" height="150px" alt="VVCE LOGO" />
+                        <img class="" src="img/MAHE-logo-high-res.jpg" width="170px;" alt="MAHE LOGO" />
+
+                    </center>
                 </div>
             </div>
         </div>
