--- a/speakers.html
+++ b/speakers.html
@@ -282,6 +282,16 @@
                                         </center>
                                     </div>
                                 </div>
+                                          <div class="card">
+                                            <img src="https://media-exp1.licdn.com/dms/image/C4D03AQFerxjElS2iyQ/profile-displayphoto-shrink_200_200/0/1657544227137?e=1674691200&v=beta&t=H8Gi72W5jEtnEnNt1aLGlKSLs_QmeQuJqNmw_J9jG8A" alt="Avatar" style="width:100%;height:300px;">
+                                            <div class="containerhome">
+                                                <center>
+                                              <h4><b>Shyam Sundar Policetti
+                                                            </b></h4> <br><br>
+                                              <h5>KreativEnerzi,<br>India</h5> 
+                                            </center>
+                                            </div>
+                                          </div>
                             </div>
                     </section>
                 </div>
