--- a/Program-Committee.html
+++ b/Program-Committee.html
@@ -82,6 +82,7 @@
                             <li><a href="Applications.html">Applications</a></li>
                         </ul>
                     </li>
+                    <li><a href="Program-Schedule.html">Program Schedule</a></li>
                     <li><a href="#">Committee</a>
 
                         <ul class="nav-dropdown">
@@ -94,8 +95,15 @@
                     <li><a href="venue.html">Venue</a></li>
                     <!-- <li><a href="ticket.html">Tickets</a></li> -->
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="accepted-papers.html">Accepted Papers</a></li>
-                    <li><a href="#">Final Camera Ready Guidelines</a></li>
+                    <li><a href="#">For Authors</a>
+
+                        <ul class="nav-dropdown">
+                            <li><a href="accepted-papers.html">Accepted Papers</a></li>
+                            <li><a href="final-camera-ready-guidelines.html">Final Camera Ready Guidelines</a></li>
+
+                        </ul>
+                        </li>
+                    
                     <li><a href="registration.html">Registration</a></li>
                 </ul>
             </nav><!-- #nav-menu-container -->
