--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                             <img src="img/IEEE-CS-BangaloreChapterOrange.png" background="white" width="200px"><br><br>
                             International Conference on Data, Decision and Systems
                         </h1>
-                        <h2 style="text-align: center; color: #ddd;">December 2-3, 2023</h2>
-                        <h3 style="text-align: center; color: #ddd;">Hybrid Conference | Bengaluru, India</h3>
+                        <h2 style="text-align: center; color: #ddd;">December 1-2, 2023</h2>
+                        <h3 style="text-align: center; color: #ddd;">Hybrid Conference | NIT Surathkal, India</h3>
                     </div>
                     <!-- <div class="col-md-6">
                             <p class="banner-nav">
