--- a/Applications.html
+++ b/Applications.html
@@ -186,18 +186,14 @@
         <p>To be updated soon!</p>
       </p>-->
       
-    
       <p class="para">
-        <strong style="font-size: 150%;">Important Dates: </strong>
-        <br>
-        <strong>To be updated soon!</strong>
-        <!--<strong>Important Dates : </strong><br>
-        <strong>Abstract Submission :</strong> September 17, 2022 <br>
-        <strong>Full Paper Submission :</strong>September 24, 2022 <br>
-        <strong>Notification of Acceptance :</strong> October 31, 2022 <br>
-        <strong>Final Paper Submission :</strong> November 12, 2022 <br>
-        <strong>Venue :</strong> BMS College Of Engineering, Bangalore-->
-
+        <strong>Important Dates : </strong><br>
+        <strong>Abstract Submission Starts:</strong> June 15, 2023<br>
+        <strong>Paper Submission Deadline:</strong> July 15, 2023<br>
+        <strong>Final Notification:</strong> September 15, 2023<br>
+        <strong>Camera Ready Submission:</strong> October 20, 2023<br>
+        <strong>Registration Due:</strong> November 1, 2023<br>
+        <strong>Venue :</strong> NITK, Surathkal
       </p>
       <br>
       <p class="para1"><strong>Paper Submission link :</strong> <a href="https://cmt3.research.microsoft.com/ICDDS2022" target="_blank">CMT</a></p>
