--- a/Organizing-Committee.html
+++ b/Organizing-Committee.html
@@ -153,12 +153,12 @@
                         <div>
                             <img src="img/vln.jpg"
                                 width="250px" height="250px">
-                            <p class="commitee-names">VLN Simhan</p>
+                            <a href="https://icraie.nitk.edu.in/speakers.html#vlnsimhan" style="text-decoration: none;" target="_blank"><p class="commitee-names">VLN Simhan</p></a>
                             <p class="position">Southern Georgia University, USA</p>
                         </div>
                         <div>
                             <img src="img/annappa.jpg" width="250px" height="250px">
-                            <p class="commitee-names">Annappa</p>
+                            <a href="https://www.linkedin.com/in/annappa/?originalSubdomain=in" style="text-decoration: none;" target="_blank"><p class="commitee-names">Annappa</p></a>
                             <p class="position">National Institute of Technology Karnataka, Surathkal, India
                             </p>
                         </div>
@@ -176,17 +176,17 @@
                         <div>
 
                             <img src="img/Gang_Li.JPG" width="250px" height="250px">
-                            <p class="commitee-names">Gang Li</p>
+                            <a href="https://www.deakin.edu.au/about-deakin/people/gang-li" target="_blank"><p class="commitee-names">Gang Li</p></a>
                             <p class="position">Deakin University, Australia</p>
                         </div>
                         <div>
                             <img src="img/dd.jpg" width="250px" height="250px">
-                            <p class="commitee-names">Dilip Dalei</p>
+                            <a href="https://scholar.google.com/citations?user=6EiU-lsAAAAJ&hl=en" target="_blank"><p class="commitee-names">Dilip Dalei</p></a>
                             <p class="position">DRDO, India</p>
                         </div>
                         <div>
                             <img src="img/Nagaraja.jpg" width="250px" height="250px">
-                            <p class="commitee-names">Nagaraja GS</p>
+                            <a href="https://www.linkedin.com/in/nagaraja-g-s-610887191/?originalSubdomain=in" target="_blank"><p class="commitee-names">Nagaraja GS</p></a>
                             <p class="position">RVCE, India</p>
                         </div>
                     </div>
@@ -202,12 +202,12 @@
                     <div class="image-holder">
                         <div>
                             <img src="img/kantiaddya.jpg" width="250px" height="250px">
-                            <p class="commitee-names">Sourav Kanti Addya,</p>
+                            <a href="https://souravkaddya.in/" target="_blank"><p class="commitee-names">Sourav Kanti Addya,</p></a>
                             <p class="position">National Institute of Technology Karnataka, Surathkal, India</p>
                         </div>
                         <div>
                             <img src="img/pushpuraj.jpg" width="250px" height="250px">
-                            <p class="commitee-names">Pushparaj Shetty D</p>
+                            <a href="https://www.linkedin.com/in/dpshetty/" target="_blank"><p class="commitee-names">Pushparaj Shetty D</p></a>
                             <p class="position">National Institute of Technology Karnataka, Surathkal, India
                             </p>
                         </div>
@@ -240,7 +240,7 @@
                     <div class="image-holder">
                         <div>
                             <img src="img/abhishek_appaji.jpeg" width="250px" height="250px">
-                            <p class="commitee-names"> Abhishek Appaji, BMSCE</p>
+                            <a href="https://www.linkedin.com/in/abhishek-appaji/?originalSubdomain=in" target="_blank"><p class="commitee-names"> Abhishek Appaji, BMSCE</p></a>
                             <p class="position">BMSCE, India</p>
                         </div>
                     </div>
@@ -249,12 +249,12 @@
             <section id="agenda">
                 <div class="container">
                     <header class="section-header">
-                        <h3>Publicity Co-Chairs</h3>
+                        <h3>Publication Co-Chairs</h3>
                     </header>
                     <div class="image-holder">
                         <div>
                             <img src="img/Alok-Ranjan.jpg" width="250px" height="250px">
-                            <p class="commitee-names">Alok Ranjan</p>
+                            <a href="https://www.linkedin.com/in/alok-ranjan/?originalSubdomain=in" target="_blank"><p class="commitee-names">Alok Ranjan</p></a>
                             <p class="position">Bosch, India</p>
                         </div>
                     </div>
