--- a/index.html
+++ b/index.html
@@ -240,9 +240,7 @@
                                                     to real-world problems and their solution approach using
                                                     data/decision science.</p>
                                                 <p>
-                                                    All accepted and presented papers will be published as conference
-                                                    proceeding and will be included in IEEE Computer Society Digital
-                                                    Library.
+                                                    Accepted papers will be submitted for inclusion into IEEE Xplore subject to meeting IEEE Xplore’s scope and quality requirements.
                                                 </p>
                                                 <center>
                                                     <a href="Foundational-Research.html">Foundational Research</a>
