--- a/Applications.html
+++ b/Applications.html
@@ -165,9 +165,8 @@
         methods, applied artificial intelligence/machine learning algorithms, MLOps, DevOps in data science, knowledge
         inferencing, context learning, application based benchmarking of ML models, experience from end-to-end
         deployment.
-        Authors can submit papers <strong> maximum of 6 pages </strong> including references. All accepted and presented
-        papers will be published as conference proceeding and will be included in IEEE Xplore Digital Library and other
-        indexing.
+        Authors can submit papers <strong> maximum of 6 pages </strong> including references. Accepted papers will be 
+        submitted for inclusion into IEEE Xplore subject to meeting IEEE Xplore’s scope and quality requirements.
       </p>
       <p class="para">The topics of interests include, but are not limited to:</p>
       <p class="para">
